some form changes for the portfolio views
